# production_fast_api

./: pyproject.toml
alembic/: env.py
alembic/versions/: 47672c9b97cc_create_auth_users_and_items_table.py
app/: main.py
app/api/: main.py
app/api/routers/: auth.py  items.py  users.py
app/core/: celery_app.py  config.py  cors.py  lifespan.py  logging.py  rate_limiter.py  redis.py  security.py  validation.py
app/crud/: crud_auth.py  crud_items.py  crud_users.py
app/db/: database.py
app/dependencies/: auth.py  rate_limit.py
app/helpers/: json_response.py
app/middleware/: logging_middleware.py  response_middleware.py
app/models/: __init__.py  auth.py  item.py  user.py
app/schemas/: auth.py  item.py  response.py  user.py
app/tasks/: email.py
